--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,4 +1,4 @@
-++ GatewaysPack1 for Commerce 0.1.0-pl
-++ Released on
+++ GatewaysPack1 for Commerce 1.0.0-pl
+++ Released on 2018-02-02
 ++++++++++++++++++++++++++
 - First release
