--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,3 +1,12 @@
+++ GatewaysPack1 for Commerce 1.1.0-rc1
+++ Released on 2018-08-23
+++++++++++++++++++++++++++
+- Add context specific overrides for skin/merchant/HMAC key
+- Fix transaction state detection (pending/cancelled); works best with Commerce 0.11.2+
+- Add endpoint (assets/components/commerce_gatewayspack1/adyen_notifications.php) that can accept HMAC signed Notifications
+
+This release has been sponsored by Adwise - thank you!
+
 ++ GatewaysPack1 for Commerce 1.0.0-pl
 ++ Released on 2018-02-02
 ++++++++++++++++++++++++++
