--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,4 +1,9 @@
 ++ GatewaysPack1 for Commerce 1.1.0-rc1
+++ Released on 2018-08-28
+++++++++++++++++++++++++++
+- Fix new assets folder being missing from transport package
+
+++ GatewaysPack1 for Commerce 1.1.0-rc1
 ++ Released on 2018-08-23
 ++++++++++++++++++++++++++
 - Add context specific overrides for skin/merchant/HMAC key
