--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,3 +1,8 @@
+++ GatewaysPack1 for Commerce 1.1.0-pl
+++ Released on 2018-08-28
+++++++++++++++++++++++++++
+- Add loading of the transaction reference from the payment response
+
 ++ GatewaysPack1 for Commerce 1.1.0-rc2
 ++ Released on 2018-08-28
 ++++++++++++++++++++++++++
