--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,3 +1,7 @@
+GatewaysPack1 for Commerce 1.1.1-pl
+-----------------------------------
+Released on 2019-01-08
+
 - Rename "commerce_gatewayspack1.adyen.handle_auth_in_notification" setting to "commerce_gatewayspack1.adyen.handle_via_auth" as it was too long [S18883]
 
 GatewaysPack1 for Commerce 1.1.0-pl
