--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,3 +1,4 @@
+- Fix shopperReference not being set since v0.12
 - Prevent "PHP warning: array_key_exists() expects parameter 2 to be array, null given" when no contexts info is set
 
 GatewaysPack1 for Commerce 1.1.1-pl
