--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,3 +1,7 @@
+GatewaysPack1 for Commerce 1.2.0-pl
+-----------------------------------
+Released on 2019-06-03
+
 - Fix shopperReference not being set since v0.12
 - Prevent "PHP warning: array_key_exists() expects parameter 2 to be array, null given" when no contexts info is set
 - Set the merchant reference to OrderIDorREF-Transaction to make it easier to identify orders from the Adyen dashboard
