Add entry to changelog for future release

--- a/core/components/commerce_gatewayspack1/docs/changelog.txt
+++ b/core/components/commerce_gatewayspack1/docs/changelog.txt
@@ -1,3 +1,5 @@
+- Upgrade usage of Commerce::$twig to Commerce::view(), bumping minimum to Commerce 1.1+
+
 GatewaysPack1 for Commerce 1.2.0-pl
 -----------------------------------
 Released on 2019-06-03
